spotless and test fixups